# django-admin-sso

./: boot_django.py  manage.py  setup.cfg
admin_sso/: apps.py  middleware.py  utils.py  views.py
admin_sso/tests/: test_view.py
viamericas_admin_sso/: asgi.py  settings.py  urls.py  wsgi.py
